--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "mongoose": "^5.13.2",
+    "validator": "^13.6.0"
   }
 }
