--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "celebrate": "^15.0.0",
+    "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "validator": "^13.6.0"
   }
