--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "no-useless-escape":"off",
-    "consistent-return":"off"
+    "consistent-return":"off",
+    "no-console":"off",
+    "func-names":"off",
+    "no-unused-vars":"off"
   }
 }
