--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,6 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-useless-escape":"off",
-    "consistent-return":"off",
-    "no-console":"off",
-    "func-names":"off",
-    "no-unused-vars":"off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
